# big2-stack

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Doxyfile.in  JsonDependency.cmake  README.md  cmake-config.json
.github/: FUNDING.yml
.github/workflows/: cmake.yml  docs.yml  linux.yml  macos.yml  static.yml  windows.yml
big2/: CMakeLists.txt
big2/include/: big2.h
big2/include/big2/: algorithm.h  app.h  app_default_quit_condition_extension.h  app_extension_base.h  asserts.h  bgfx_utils.h  default_quit_condition_app_extension.h  embedded_shader.h  event_queue.h  execution.h  glfw_utils.h  imgui_impl_bgfx.h  macro_utils.h  macros.h  scoped.h  simple_app.h  variants.h  void.h  void_ptr.h  window.h
big2/include/big2/bgfx/: bgfx_callback_handler.h  bgfx_frame_buffer_scoped.h  bgfx_initialization_scoped.h  bgfx_scoped_handle.h  bgfx_utils.h  bgfx_view_scoped.h  embedded_shader.h
big2/include/big2/glfw/: event_queue.h  glfw_initialization_scoped.h  glfw_utils.h  glfw_window_scoped.h
big2/include/big2/imgui/: imgui.h  imgui_app_extension.h  imgui_context_wrapper.h  imgui_frame_scoped.h  imgui_impl_bgfx.h  imgui_single_context_scoped.h
big2/shaders/: vs_ocornut_imgui.sc
big2/src/: app.cpp  app_default_quit_condition_extension.cpp  app_extension_base.cpp  asserts.cpp  asserts.h  bgfx_utils.cpp  big2.cpp  default_quit_condition_app_extension.cpp  event_queue.cpp  glfw_utils.cpp  id_manager.h  imgui_impl_bgfx.cpp  library.cpp  native_window.h  simple_app.cpp  window.cpp
big2/src/bgfx/: bgfx_callback_handler.cpp  bgfx_frame_buffer_scoped.cpp  bgfx_initialization_scoped.cpp  bgfx_utils.cpp  bgfx_view_scoped.cpp
big2/src/glfw/: event_queue.cpp  glfw_initialization_scoped.cpp  glfw_utils.cpp  glfw_window_scoped.cpp
big2/src/imgui/: imgui.cpp  imgui_app_extension.cpp  imgui_context_wrapper.cpp  imgui_frame_scoped.cpp  imgui_impl_bgfx.cpp  imgui_single_context_scoped.cpp
cmake/: bgfx.cmake  docs.cmake  glfw.cmake  glm.cmake  imgui.cmake  microsoft-gsl.cmake  range-v3.cmake  spdlog.cmake  utils.cmake
docs/: CONTRIBUTING.md  getting-started.md  home.md  layout.xml
docs/templates/: gh-fork-ribbon.css  header.html  style.css
examples/: CMakeLists.txt
examples/shaders/: varying.def.sc  vs_basic.sc
examples/src/: 01_basic.cpp  02_triangle.cpp  03_multiple_windows.cpp  04_event_queue.cpp  05_scoped_initialization.cpp  06_framebuffer_helpers.cpp  07_docking_imgui.cpp  08_app.cpp  09_simple_app.cpp  basic.cpp  event_queue.cpp  multiple_windows.cpp  scoped_initialization.cpp  triangle.cpp
patches/: bgfx-cmake.patch
scripts/: changelist.py
